add elden ring game

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
               <img src="https://static-cdn.jtvnw.net/ttv-boxart/512980-144x192.jpg" alt="Capa do jogo Fall Guys">
             </a>
           </li>
+
+          <li>
+            <a target="_blank" href="https://www.twitch.tv/directory/game/Elden%20Ring">
+              <img src="https://static-cdn.jtvnw.net/ttv-boxart/512953_IGDB-144x196.jpg" alt="Capa do jogo Fall Guys">
+            </a>
+          </li>
         </ul>
       </div>
     </section>
@@ -77,7 +83,7 @@
                 alt="Capa do canal da twitch de Melany Lee">
             </a>
           </li>
-            </a>
+          </a>
           </li>
         </ul>
       </div>
