corrigido alt jogo er, add jogo pu

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap" rel="stylesheet">
-  <title>NWL ESports</title>
+  <title>NWL eSports</title>
 </head>
 
 <body>
@@ -24,6 +24,12 @@
         <h2>Meus jogos</h2>
         <p>Os games que mais curto jogar</p>
         <ul class="game-list">
+          <li>
+            <a target="_blank" href="https://www.twitch.tv/directory/game/Pok%C3%A9mon%20Unite">
+              <img src="https://static-cdn.jtvnw.net/ttv-boxart/518379_IGDB-144x192.jpg"
+                alt="Capa do jogo Pokemon Unite">
+            </a>
+          </li>
           <li>
             <a target="_blank" href="https://www.twitch.tv/directory/game/Oxygen%20Not%20Included">
               <img src="https://static-cdn.jtvnw.net/ttv-boxart/493815_IGDB-144x192.jpg"
@@ -43,7 +49,7 @@
 
           <li>
             <a target="_blank" href="https://www.twitch.tv/directory/game/Elden%20Ring">
-              <img src="https://static-cdn.jtvnw.net/ttv-boxart/512953_IGDB-144x196.jpg" alt="Capa do jogo Fall Guys">
+              <img src="https://static-cdn.jtvnw.net/ttv-boxart/512953_IGDB-144x196.jpg" alt="Capa do jogo Elden Ring">
             </a>
           </li>
         </ul>
